--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>My First Ever Website</h1>
     <h2>Github Push up Now</h2>
+    <button>Click Me</button>
+    <br>
+    <button>Buy Now</button>
 </body>
 </html>
